# home-cortex

./: .env.example  .gitignore  LICENSE  alerts.yaml  docker-compose.yml
brain/: .dockerignore  Dockerfile  chromadb_store.py  config.py  main.py  mqtt.py  pyproject.toml  telegram_bot.py
brain/agents/: base.py
brain/agents/homeassistant/: agent.py  prompts.py  tools.py
brain/agents/memory/: agent.py  prompts.py  tools.py
brain/graph/: events.py  factory.py  runner.py  state.py
brain/graph/patterns/: supervisor.py
brain/reporters/: telegram.py
brain/routers/: voice.py  webhooks.py
brain/services/: alert_monitor.py  ha_client.py  notifier.py  transcriber.py
brain/tests/: test_alert_monitor.py  test_chromadb_store.py  test_config_models.py  test_events.py  test_factory.py  test_graph_runner.py  test_ha_agent_tools.py  test_ha_client.py  test_main.py  test_memory_agent.py  test_memory_tools.py  test_mqtt.py  test_notifier.py  test_supervisor.py  test_telegram.py  test_telegram_reporter.py  test_transcriber.py  test_voice.py  test_webhooks.py
mosquitto/: mosquitto.conf
