[project]
name = "home-cortex-brain"
version = "0.1.0"
description = "The Brain - Central intelligence layer for home automation"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "aiomqtt",
    "chromadb",
    "httpx",
    "pydantic-settings",
    "langchain-openai==1.1.10",
    "langgraph==1.0.10",
    "langchain-core==1.2.16",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest-httpx>=0.36.0",
]
