[project]
name = "home-cortex-brain"
version = "0.1.0"
description = "The Brain - Central intelligence layer for home automation"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "aiomqtt",
    "chromadb",
    "httpx",
    "pydantic-settings",
    "langchain-openai==1.1.10",
    "langgraph==1.1.2",
    "langchain-core==1.2.16",
    "langchain==1.2.12",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.0",
]
